begin develop area and placement
